<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".addPictureActivity">

    <!--laste opp bilde -->

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/image_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"/>

    <!-- Legg til -->

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_velgBilde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velgBilde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Input navn til bilde -->
    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/skrivHer"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- velg bilde -->
    <Button
        android:id="@+id/btn_leggtil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leggtil"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_picaddTilbake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilbake" />

</LinearLayout>